# garagem3info3

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
core/: admin.py  models.py  views.py
core/migrations/: 0001_initial.py
garagem/: settings.py  urls.py  wsgi.py
static/: staticfiles.json
